# Pokemon-Prediction

./: pyproject.toml
Project/: Makefile  README.md  requirements.txt
Project/docs/: mkdocs.yml
Project/docs/docs/: index.md
Project/models/: Ada_model.pkl  EN_model.pkl  GB_model.pkl  KNN_model.pkl  LR_model.pkl  Lasso_model.pkl
Project/notebooks/: Pokemon_Regression_Model.ipynb
Project/pokemon_prediction/: __init__.py  config.py  dataset.py  features.py  plots.py
Project/pokemon_prediction/modeling/: predict.py  train.py
proyecto1env/: pyvenv.cfg
