[tool.poetry]
name = "pokemon-prediction"
version = "0.1.0"
description = "modelo que predice si un pokemon puede ganar una batalla"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = {git = "https://github.com/python-poetry/poetry.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
